--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 10px;
+  /* padding: 0 10px; */
 }
 
 .banner-section {
